[ci skip] Deployed 138c9d4 with MkDocs version: 1.3.0

--- a/default_configs/monitor_cirrus/index.html
+++ b/default_configs/monitor_cirrus/index.html
@@ -2044,7 +2044,7 @@
 <p><strong>Monitor Page Views</strong></p>
 <p>This is a metric intended to test the functionality of Cirrus within Monitor.
 It simply sums the page view events for Monitor.</p>
-<p>Analysis Periods:  <code>daily</code> ,   <code>weekly</code> ,   <code>overall</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>daily</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#monitor_events_v1"><code>monitor_events_v1</code></a></p>
 <p>Statistics: <code>bootstrap_mean</code>, <code>empirical_cdf</code>, <code>deciles</code></p>
 <details>
