[ci skip] Deployed 31ad740 with MkDocs version: 1.3.0

--- a/default_configs/monitor_cirrus/index.html
+++ b/default_configs/monitor_cirrus/index.html
@@ -2060,7 +2060,7 @@
 It simply sums the page view events for Monitor.</p>
 <p>Analysis Periods:  <code>daily</code> ,   <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#monitor_events_v1"><code>monitor_events_v1</code></a></p>
-<p>Statistics: <code>bootstrap_mean</code>, <code>empirical_cdf</code>, <code>deciles</code></p>
+<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code>, <code>empirical_cdf</code></p>
 <details>
 <summary>Definition:</summary>
 
