[ci skip] Deployed 8a08127 with MkDocs version: 1.3.0

--- a/data_sources/firefox_desktop/index.html
+++ b/data_sources/firefox_desktop/index.html
@@ -2424,7 +2424,7 @@
 
 <hr />
 <h3 id="newtab_interactions"><a href="#newtab_interactions">newtab_interactions</a></h3>
-<p>Client ID column: <code>None</code></p>
+<p>Client ID column: <code>legacy_telemetry_client_id</code></p>
 <p>Submission Date column: <code>submission_date</code></p>
 <details>
 <summary>Definition:</summary>
