[ci skip] Deployed 1f3f4e6 with MkDocs version: 1.3.0

--- a/metrics/firefox_desktop/index.html
+++ b/metrics/firefox_desktop/index.html
@@ -4537,7 +4537,7 @@ For questions please contact bochocki@mozilla.com or firefox-kpi@mozilla.com.
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">SUM(IF(payload.metadata.moz_crash_reason LIKE 'MOZ_CRASH%', 1, 0))
+<pre><code class="language-sql">SUM(IF(payload.metadata.moz_crash_reason LIKE r'MOZ\_CRASH%', 1, 0))
 </code></pre>
 
 </details>
