[ci skip] Deployed 28b30d0 with MkDocs version: 1.3.0

--- a/data_sources/fenix/index.html
+++ b/data_sources/fenix/index.html
@@ -2227,7 +2227,7 @@
 <pre><code class="language-sql">(
     SELECT *
     FROM `mozdata.search.mobile_search_clients_engines_sources_daily`
-    WHERE normalized_app_name = &quot;Fenix&quot;
+    WHERE normalized_app_name_os = 'Firefox Android'
 )
 </code></pre>
 
