--- a/data_sources/firefox_ios/index.html
+++ b/data_sources/firefox_ios/index.html
@@ -2255,7 +2255,7 @@
 <pre><code class="language-sql">(
     SELECT *
     FROM `mozdata.search.mobile_search_clients_engines_sources_daily`
-    WHERE os = &quot;iOS&quot; AND normalized_app_name = &quot;Fennec&quot;
+    WHERE normalized_app_name_os = 'Firefox iOS'
 )
 </code></pre>
 
