--- a/data_sources/klar_ios/index.html
+++ b/data_sources/klar_ios/index.html
@@ -2136,7 +2136,7 @@
 <pre><code class="language-sql">(
     SELECT *
     FROM `mozdata.search.mobile_search_clients_engines_sources_daily`
-    WHERE app_name = 'Klar' and os = 'iOS'
+    WHERE normalized_app_name_os = 'Klar iOS'
  )
 </code></pre>
 
