--- a/metrics/fenix/index.html
+++ b/metrics/fenix/index.html
@@ -2608,7 +2608,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">{{agg_sum(&quot;metrics.counter.events_total_uri_count&quot;)}}
+<pre><code class="language-sql">{{agg_sum(&quot;metrics.counter.events_normal_and_private_uri_count&quot;)}}
 </code></pre>
 
 </details>
