--- a/data_sources/focus_ios/index.html
+++ b/data_sources/focus_ios/index.html
@@ -2199,7 +2199,7 @@
 <pre><code class="language-sql">(
     SELECT *
     FROM `mozdata.search.mobile_search_clients_engines_sources_daily`
-    WHERE app_name = 'Focus' and os = 'iOS'
+    WHERE normalized_app_name_os = 'Focus iOS'
  )
 </code></pre>
 
