[ci skip] Deployed 765cd07 with MkDocs version: 1.3.0

--- a/data_sources/firefox_desktop/index.html
+++ b/data_sources/firefox_desktop/index.html
@@ -2409,7 +2409,7 @@
 <hr />
 <h3 id="events_memory"><a href="#events_memory">events_memory</a></h3>
 <p>Client ID column: <code>None</code></p>
-<p>Submission Date column: <code>DATE(submission_date)</code></p>
+<p>Submission Date column: <code>submission_date</code></p>
 <details>
 <summary>Definition:</summary>
 
