--- a/data_sources/focus_ios/index.html
+++ b/data_sources/focus_ios/index.html
@@ -2133,7 +2133,7 @@
 <hr />
 <h3 id="baseline_v2"><a href="#baseline_v2">baseline_v2</a></h3>
 <p>Client ID column: <code>client_info.client_id</code></p>
-<p>Submission Date column: <code>DATE(submission_timestamp)</code></p>
+<p>Submission Date column: <code>submission_date</code></p>
 <details>
 <summary>Definition:</summary>
 
