[ci skip] Deployed 36bdddb with MkDocs version: 1.3.0

--- a/data_sources/firefox_ios/index.html
+++ b/data_sources/firefox_ios/index.html
@@ -2269,7 +2269,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">`moz-fx-data-shared-prod.firefox_ios.new_profile_activation`
+<pre><code class="language-sql">`mozdata.firefox_ios.clients_activation`
 </code></pre>
 
 </details>
