--- a/metrics/firefox_ios/index.html
+++ b/metrics/firefox_ios/index.html
@@ -2753,7 +2753,7 @@ For questions please contact bochocki@mozilla.com or firefox-kpi@mozilla.com.
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">COALESCE(SUM(activated))
+<pre><code class="language-sql">COUNTIF(is_activated)
 </code></pre>
 
 </details>
