--- a/outcomes/firefox_desktop/pocket_newtab/index.html
+++ b/outcomes/firefox_desktop/pocket_newtab/index.html
@@ -2167,7 +2167,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">COALESCE(SUM(searches, 0))
+<pre><code class="language-sql">COALESCE(SUM(searches), 0)
 </code></pre>
 
 </details>
@@ -2183,7 +2183,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">COALESCE(SUM(sponsored_pocket_clicks, 0))
+<pre><code class="language-sql">COALESCE(SUM(sponsored_pocket_clicks), 0)
 </code></pre>
 
 </details>
@@ -2199,7 +2199,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">COALESCE(SUM(organic_pocket_clicks, 0))
+<pre><code class="language-sql">COALESCE(SUM(organic_pocket_clicks), 0)
 </code></pre>
 
 </details>
